Project

General

Profile

Actions

Bug #55130

closed

kclient: get stuck forever when the forward seq exceeds 256

Added by Xiubo Li about 2 years ago. Updated about 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Crash signature (v1):
Crash signature (v2):

Description

The type of 'num_fwd' in ceph 'MClientRequestForward' is 'int32_t',
while in 'ceph_mds_request_head' the type is '__u8'. So in case
the request bounces between MDSes exceeding 256 times, the client
will get stuck.

In this case it's ususally a bug in MDS and continue bouncing the
request makes no sense.

Teuthology test:

https://pulpito.ceph.com/vshankar-2022-03-24_09:22:49-fs-wip-vshankar-fscrypt-20220324-121321-testing-default-smithi/6757483/

Related ceph PR:

https://github.com/ceph/ceph/pull/45073


Related issues 1 (0 open1 closed)

Copied from CephFS - Bug #55129: client: get stuck forever when the forward seq exceeds 256ResolvedXiubo Li

Actions
Actions #1

Updated by Xiubo Li about 2 years ago

  • Copied from Bug #55129: client: get stuck forever when the forward seq exceeds 256 added
Actions #2

Updated by Xiubo Li about 2 years ago

  • Status changed from Fix Under Review to Resolved
Actions #3

Updated by Xiubo Li about 2 years ago

  • Backport deleted (quincy,pacific)
Actions #4

Updated by Xiubo Li about 2 years ago

  • Description updated (diff)
Actions

Also available in: Atom PDF